--- a/.github/workflows/checkApp.yml
+++ b/.github/workflows/checkApp.yml
@@ -7,7 +7,7 @@ on:
     branches: [ develop ]
 
 jobs:
-  build:
+  eslint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
