--- a/.github/workflows/checkApp.yml
+++ b/.github/workflows/checkApp.yml
@@ -1,4 +1,4 @@
-name: Check app
+name: CI
 
 on:
   push:
@@ -8,10 +8,12 @@ on:
 
 jobs:
   eslint:
+    name: Lint code
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Check code
+      uses: actions/checkout@v2
     - name: Install modules
-      run: yarn
+      run: yarn install
     - name: Run Lints
-      run: lint
+      run: yarn lint
