--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "jest": "^28.1.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "vite": "^2.9.9"
+
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -37,8 +39,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.15.0",
     "prettier": "2.6.2",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "typescript": "^4.6.3"
   },
   "packageManager": "yarn@1.22.1"
 }
