--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,20 @@
-name: Deploy
-
-on:
-  push:
-    branches: [ develop ]
-
+name: Build and Deploy
+on: [push]
 jobs:
-    build:
-      runs-on: ubuntu-latest
-    
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v1
-          
-        - name: Install and build
-          run: yarn install && yarn build 
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 
+        uses: actions/checkout@v3
 
-        - name: Deploy
-          uses: JamesIves/github-pages-deploy-action@v4.3.3
-          with:
-            branch: develop
-            folder: build
+      - name: Install and Build
+        run: |
+          yarn install
+          yarn build
+
+      - name: Deploy 
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
+        with:
+          branch: develop
+          folder: build
