--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,51 @@
-name: Build and Deploy
-on: [push]
+name: Deploy
+
+on:
+  push:
+    branches:
+      - develop
+
 jobs:
-  build-and-deploy:
-    concurrency: ci-${{ github.ref }}
+  build:
+    name: Build
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout 
-        uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
-      - name: Install and Build
-        run: |
-          yarn install
-          yarn build
-
-      - name: Deploy 
-        uses: JamesIves/github-pages-deploy-action@v4.3.3
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          branch: develop
-          folder: build
+          node-version: 16
+
+      - name: Install dependencies
+        uses: yarn install
+
+      - name: Build project
+        run: yarn build
+
+      - name: Upload production-ready build files
+        uses: actions/upload-artifact@v2
+        with:
+          name: production-files
+          path: ./dist
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/develop'
+
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: production-files
+          path: ./dist
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
