--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,52 +1,26 @@
+name: Deploy GH Pages
 
-name: Deploy
-
-on:
-  push:
-    branches:
-      - develop
+on: push
 
 jobs:
-  build:
-    name: Build
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout 🛎️
         uses: actions/checkout@v2
-
-      - name: Setup Node
-        uses: actions/setup-node@v1
         with:
-          node-version: 16
+          persist-credentials: false
 
-      - name: Install dependencies
-        uses: yarn install
+      - name: Install 🔧
+        run: npm install
 
-      - name: Build project
-        run: yarn build
+      - name: Build 🏗️
+        run: npm run build
 
-      - name: Upload production-ready build files
-        uses: actions/upload-artifact@v2
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          name: production-files
-          path: ./dist
-
-  deploy:
-    name: Deploy
-    needs: build
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop'
-
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: production-files
-          path: ./dist
-
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: develop
+          BUILD_SCRIPT: yarn install && yarn build
