--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,27 @@
 name: Deploy GH Pages
 
-on: push
+on: 
+  push:
+    brunches:
+      - 'develop'
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2
+    strategy:
+      matrix:
+        node-version: [15.x]
+
+    step:
+      - name: Checkout
+        uses: action/checkout@v1
+
+      - name: install and build
+        run: yarn install && yarn build
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          persist-credentials: false
-
-      - name: Install 🔧
-        run: npm install
-
-      - name: Build 🏗️
-        run: npm run build
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: develop
-          BUILD_SCRIPT: yarn install && yarn build
+          branch: develop 
+          folder: build
