--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         node-version: [15.x]
 
-    step:
+    steps:
       - name: Checkout
         uses: action/checkout@v1
 
