--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "init-app",
+  "homepage": "https://vladdoletskiy.github.io/basic-react-vlad-doletskiy",
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -27,11 +30,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "gh-pages": "^4.0.0",
     "jest": "^28.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "vite": "^2.9.9"
-
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
