--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: install and build
         run: yarn install && yarn build
