--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install and Build 
         run: |
           yarn install
-          yarn build
+          yarn build-gh-pages
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
