--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,18 @@
 name: Build and Deploy
-on: [push]
+on:
+  push:
+    branches: [develop]
+
+  workflow_dispatch:
+
 jobs:
   build-and-deploy:
-    concurrency: ci-${{ github.ref }} 
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+        
     steps:
       - name: Checkout
         uses: actions/checkout@v3
