--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy
 on:
   pull_request:
     branches:
-      - deploy
+      - feature/gh-actions
     types: [closed]
 
 jobs:
