--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,10 @@
 name: Build and Deploy
 on:
   pull_request:
-    branches:
-      - feature/gh-actions
-    types: [closed]
+    branches: [ develop ]
 
 jobs:
   build-and-deploy:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
 
     steps:
