fix build comand

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install and Build 
         run: |
           yarn install
-          yarn build-gh-pages
+          yarn build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.3
