--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "build-gh-pages": "tsc && vite build --base=/basic-react-vlad-doletskiy/",
+    "build": "tsc && vite build --base=/basic-react-vlad-doletskiy/",
     "preview": "vite preview",
     "prettier": "prettier --write .",
     "lint": "yarn lint:style && yarn lint:deps && yarn lint:ts",
