--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@effector/babel-plugin": "^0.5.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
+    "@mui/material": "^5.8.1",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "babel": "^6.23.0",
@@ -32,6 +37,7 @@
     "jest": "^28.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "styled-components": "^5.3.5",
     "vite": "^2.9.9"
   },
   "devDependencies": {
