--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest": "^28.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "vite": "^2.9.9"
   },
