--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "sass": "^1.52.1",
     "styled-components": "^5.3.5",
     "vite": "^2.9.9"
   },
