--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,6 @@
     "semi": true,
     "trailingComma": "all",
     "singleQuote": true,
-    "printWidth": 100
+    "printWidth": 100,
+    "endOfLine":"auto"
   }
