--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,6 +4,5 @@
     "semi": true,
     "trailingComma": "all",
     "singleQuote": true,
-    "printWidth": 100,
-    "endOfLine":"auto"
+    "printWidth": 100
   }
