--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@effector/babel-plugin": "^0.5.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/roboto": "^4.5.7",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
-    "@mui/styled-engine-sc": "^5.8.0",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "babel": "^6.23.0",
@@ -39,7 +39,6 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.52.1",
-    "styled-components": "^5.3.5",
     "vite": "^2.9.9"
   },
   "devDependencies": {
