--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:ts": "tsc --noEmit"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.22.0",
     "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
