--- a/package.json
+++ b/package.json
@@ -26,24 +26,15 @@
     "@mui/material": "^5.8.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
-    "babel": "^6.23.0",
-    "dependency-cruiser": "^11.7.0",
-    "effector": "^22.3.0",
-    "effector-react": "^22.0.6",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-effector": "^0.6.0",
-    "eslint-plugin-jest": "^26.2.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
     "gh-pages": "^4.0.0",
-    "jest": "^28.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.52.1",
     "vite": "^2.9.9",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite-tsconfig-paths": "^3.5.0",
+    "effector": "^22.3.0",
+    "effector-react": "^22.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -51,7 +42,16 @@
     "@vitejs/plugin-react": "^1.3.0",
     "eslint": "^8.15.0",
     "prettier": "2.6.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "babel": "^6.23.0",
+    "dependency-cruiser": "^11.7.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-effector": "^0.6.0",
+    "eslint-plugin-jest": "^26.2.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "jest": "^28.1.0"
   },
   "packageManager": "yarn@1.22.1"
 }
