--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "effector": "^22.3.0",
     "effector-react": "^22.0.6",
     "gh-pages": "^4.0.0",
